--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ font-family: 'Gloria Hallelujah', cursive; margin-top: 450px;">
     <center>
 
         <img src="gif.gif" alt="">
-        <h2 style="margin-top: 6%;">kurapika.</h2>
+        <h2 style="margin-top: 6%;">my angels? -jesu.</h2>
 
 
     </center>
