--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Gloria+Hallelujah&display=swap');
-        </style>
-    <title>kurapika</title>
+    @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
+    </style> 
+    <title>nothing</title>
 </head>
-<body style="background-color: black; color: whitesmoke; font-family: 'Architects Daughter', cursive;
-font-family: 'Gloria Hallelujah', cursive; margin-top: 450px;">
+<body style="background-color: black; color: whitesmoke; font-family: 'Zen Kurenaido', sans-serif; margin-top: 410px;">
 
     <center>
 
