--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <center>
 
-        <img src="gif.gif" alt="">
+        <img src="https://imgyukle.com/i/kIJe6S">
         <h2 style="margin-top: 6%; font-size: 13px;">my rose? -jesu.</h2>
 
 
