--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <center>
 
         <img src="/gif.gif">
-        <h2 style="margin-top: 6%; font-size: 13px;">my rose? -endose.</h2>
+        <h2 style="margin-top: 6%; font-size: 13px;">my rose? -endse.</h2>
 
 
     </center>
