--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     </style> 
     <title>nothing</title>
 </head>
-<body style="background-color: black; color: whitesmoke; font-family: 'Zen Kurenaido', sans-serif; margin-top: 410px;">
+<body style="background-color: black; color: whitesmoke; font-family: 'Zen Kurenaido', sans-serif; margin-top: 220px;">
 
     <center>
 
-        <img src="/gif.gif">
+        <img src="https://cdn.discordapp.com/attachments/867816780226363393/902937292975517746/gif.gif">
         <h2 style="margin-top: 6%; font-size: 13px;">my rose? -endse.</h2>
 
 
